--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">180</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">113</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.java.testing.youtube.TestNgBasics</td><td><a href="#m0">googleLogoTest</a></td><td rowspan="1">1582906182050</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m1">googleTitleTest</a></td><td rowspan="1">1582906182077</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">searchTest</a></td><td rowspan="1">1582906182086</td><td rowspan="1">6</td></tr><tr class="passedodd"><td rowspan="1">com.java.testing.youtube.understandtestng</td><td><a href="#m3">testng</a></td><td rowspan="1">1582906182140</td><td rowspan="1">5</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testNG.Configuration_Annotations</td><td><a href="#m0">searchCustomer</a></td><td rowspan="1">1583491676303</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m1">searchProduct</a></td><td rowspan="1">1583491676340</td><td rowspan="1">6</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.java.testing.youtube.TestNgBasics#googleLogoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.java.testing.youtube.TestNgBasics#googleTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.java.testing.youtube.TestNgBasics#searchTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.java.testing.youtube.understandtestng#testng</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testNG.Configuration_Annotations#searchCustomer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testNG.Configuration_Annotations#searchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
