--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7caf88">  <td>20/02/28 20:56:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="infintLoopTest.test1()[pri:0, instance:com.java.testing.youtube.infintLoopTest@1dac5ef]">test1</td> 
-  <td>main@1301352406</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterClass()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>104</td> <td title="&lt;&lt;Configuration_Annotations.afterSuite()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>2</td> <td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterTest()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-81</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeClass()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-118</td> <td title="&gt;&gt;Configuration_Annotations.beforeSuite()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-105</td> <td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeTest()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Configuration_Annotations.searchCustomer()[pri:0, instance:testNG.Configuration_Annotations@32910148]">searchCustomer</td> 
+  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Configuration_Annotations.searchProduct()[pri:0, instance:testNG.Configuration_Annotations@32910148]">searchProduct</td> 
+  <td>main@1288235781</td>   <td></td> </tr>
 </table>
