--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>0</td> <td title="&gt;&gt;Configuration_Annotations.beforeSuite()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>13</td> <td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeTest()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeClass()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Configuration_Annotations.searchCustomer()[pri:0, instance:testNG.Configuration_Annotations@32910148]">searchCustomer</td> 
-  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>99</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Configuration_Annotations.beforeMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>99</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Configuration_Annotations.searchProduct()[pri:0, instance:testNG.Configuration_Annotations@32910148]">searchProduct</td> 
-  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterMethod()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>118</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterClass()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>120</td> <td>&nbsp;</td><td title="&lt;&lt;Configuration_Annotations.afterTest()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
-<tr bgcolor="7ef87a">  <td>20/03/06 16:47:56</td>   <td>222</td> <td title="&lt;&lt;Configuration_Annotations.afterSuite()[pri:0, instance:testNG.Configuration_Annotations@32910148]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1288235781</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:19</td>   <td>0</td> <td title="&gt;&gt;HRM.setUp()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:42</td>   <td>23283</td> <td>&nbsp;</td><td title="&gt;&gt;HRM.signIn()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;signIn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:50</td>   <td>30390</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HRM.userSearch()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;userSearch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:54</td>   <td>34756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HRM.userSignOut()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;userSignOut</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:55</td>   <td>35754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HRM.Logout()[pri:0, instance:testNG.HRM@672872e1]">Logout</td> 
+  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:57</td>   <td>37883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HRM.tearDown()[pri:0, instance:testNG.HRM@672872e1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
 </table>
