--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--1937898725\testng-customsuite.xml</span>
+                    <span>C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--348197977\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testNG.HRM" class="method navigator-link" hash-for-method="Logout">Logout</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.java.testing.youtube.TestProject" class="method navigator-link" hash-for-method="Test">Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testNG.HRM</span>
+              <span class="class-name">com.java.testing.youtube.TestProject</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Logout">
-                  </a> <!-- Logout -->
-                  <span class="method-name">Logout</span>
+                  <a name="Test">
+                  </a> <!-- Test -->
+                  <span class="method-name">Test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--1937898725\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mahbub\AppData\Local\Temp\testng-eclipse--348197977\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testNG.HRM&quot;/&gt;
+      &lt;class name=&quot;com.java.testing.youtube.TestProject&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Logout')
-data.setCell(0, 2, 'testNG.HRM')
-data.setCell(0, 3, 2115);
+data.setCell(0, 1, 'Test')
+data.setCell(0, 2, 'com.java.testing.youtube.TestProject')
+data.setCell(0, 3, 20262);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,30 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testNG.HRM</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.java.testing.youtube.TestProject</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">setUp</span>
+                <span class="method-name">invokeBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
-              <div class="configuration-test before">
-                <span class="method-name">signIn</span>
-                <span class="method-start">23306 ms</span>
-              </div> <!-- configuration-test before -->
-              <div class="configuration-class before">
-                <span class="method-name">userSearch</span>
-                <span class="method-start">30413 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-method before">
-                <span class="method-name">userSignOut</span>
-                <span class="method-start">34777 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Logout</span>
-                <span class="method-start">35778 ms</span>
+                <span class="method-name">Test</span>
+                <span class="method-start">27187 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">37907 ms</span>
+                <span class="method-start">47457 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
