--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HRM.Logout()[pri:0, instance:testNG.HRM@672872e1]">Logout</td> 
-  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:19</td>   <td>-35754</td> <td title="&gt;&gt;HRM.setUp()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:42</td>   <td>-12471</td> <td>&nbsp;</td><td title="&gt;&gt;HRM.signIn()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;signIn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:57</td>   <td>2129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HRM.tearDown()[pri:0, instance:testNG.HRM@672872e1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:50</td>   <td>-5364</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HRM.userSearch()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;userSearch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
-<tr bgcolor="ffa2a9">  <td>20/03/07 12:29:54</td>   <td>-998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HRM.userSignOut()[pri:0, instance:testNG.HRM@672872e1]">&gt;&gt;userSignOut</td> 
-<td>&nbsp;</td>  <td>main@1997353766</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/12 20:49:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestProject.Test()[pri:0, instance:com.java.testing.youtube.TestProject@76ed1b7c]">Test</td> 
+  <td>main@81412691</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/12 20:48:50</td>   <td>-27163</td> <td title="&gt;&gt;TestProject.invokeBrowser()[pri:0, instance:com.java.testing.youtube.TestProject@76ed1b7c]">&gt;&gt;invokeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
+<tr bgcolor="ffa2a9">  <td>20/03/12 20:49:38</td>   <td>20270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestProject.tearDown()[pri:0, instance:com.java.testing.youtube.TestProject@76ed1b7c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
 </table>
